--- a/src/html/authors.html
+++ b/src/html/authors.html
@@ -29,11 +29,11 @@
     <div class="row">
         <div class="card-group">
             <div class="card between-card">
-                <img src="../images/profile.png" class="card-img-top" alt="profile-pic">
+                <img src="../images/profile.png" class="card-img-top" alt="profile-pic" style="width: 50%; margin: auto">
                 <div class="card-body">
                     <h5 class="card-title">Khulan Jargalsaikhan</h5>
                     <p class="card-text">Recent graduate and majored in Information System
-                        Technology A.A.S from Northern Virginia Community College in 2021.</p>
+                        Technology A.A.S from Northern Virginia Community College in 2021.</p
                     <p><i>Certification:</i></p>
                     <ul>
                         <li>AWS Cloud Practitioner Certified</li>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="card between-card">
-                <img src="../images/profile-pic2.jpg" class="card-img-top" alt="profile-pic">
+                <img src="../images/profile-pic2.jpg" class="card-img-top" alt="profile-pic" style="width: 50%; margin: auto">
                 <div class="card-body">
                     <h5 class="card-title">It is me again</h5>
                     <p class="card-text">Recent graduate and majored in Information System
