--- a/src/html/blog5.html
+++ b/src/html/blog5.html
@@ -33,24 +33,24 @@
         <p><i>23 July 2021</i></p>
 
         <ul>
-            <li>The < span > tag is used to group inline-elements in a document.</li>
-            <li>The < span > tag provides no visual change by itself.</li>
-            <li>The < span > tag provides a way to add a hook to a part of a text or a part of a document.</li>
-            <p>< span style="color:blue;font-weight:bold">blue < /span ></p>
-            <li>The < div > tag defines a division or a section in an HTML document.</li>
-            <li>The < div > tag is used to group block-elements to format them with CSS.</li>
+            <li>The &lt;span&gt; tag is used to group inline-elements in a document.</li>
+            <li>The &lt;span&gt; tag provides no visual change by itself.</li>
+            <li>The &lt;span&gt; tag provides a way to add a hook to a part of a text or a part of a document.</li>
+            <p>&lt;span style="color:blue;font-weight:bold"&gt;blue &lt;/span&gt;</p>
+            <li>The &lt;div&gt; tag defines a division or a section in an HTML document.</li>
+            <li>The &lt;div&gt; tag is used to group block-elements to format them with CSS.</li>
         </ul>
-        <p>< div style="color:#0000FF" ></p>
-        <p>< h3 >This is a heading< /h3 ></p>
-        <p>   < p>This is a paragraph.< /p > </p>
-        <p> < /div ></p>
-        <p>The < span> and < div > tags have no required attributes, but the three that are the most useful are:</p>
+        <p>&lt;div style="color:#0000FF"&gt;</p>
+        <p>&lt;h3&gt;This is a heading&lt;/h3&gt;</p>
+        <p>&lt;p&gt;This is a paragraph.&lt;/p&gt;</p>
+        <p> &lt;/div&gt;</p>
+        <p>The &lt;span&gt; and &lt;div&gt; tags have no required attributes, but the three that are the most useful are:</p>
         <ul>
             <li>style</li>
             <li>class</li>
             <li>id</li>
         </ul>
-        <p>You can make a < span > or < div > point to a style sheet using id or class.</p>
+        <p>You can make a &lt;span&gt; or &lt;div&gt; point to a style sheet using id or class.</p>
 
 
         <p class="source"><i><a>Source: Montgomery College Java Bootcamp (canvas)</a></i></p>
