--- a/src/html/home.html
+++ b/src/html/home.html
@@ -31,37 +31,40 @@
     </div>
     <div class="row card blog"  >
         <div class="card-body">
-            <h5 class="card-title">Introduction to Java</h5>
+            <h5 class="card-title">Overrides</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
-            <p class="card-text">Java is a programming language developed at Sun Microsystems in 1995 by James Gosling. <a href="blog1.html" class="card-link">View More</a></p>
+            <p class="card-text">Overriding in Java. In any object-oriented programming language, Overriding is a
+                feature that allows a subclass or child class to provide a specific implementation... <a href="blog1.html" class="card-link">View More</a></p>
         </div>
     </div>
     <div class="row card blog"  >
         <div class="card-body">
-            <h5 class="card-title">Java Keywords</h5>
+            <h5 class="card-title">Encapsulation</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
-            <p class="card-text">A keywordis a reserved word in Java that has specific meaning to the compiler. <a href="blog2.html" class="card-link">View More</a></p>
-        </div>
-    </div>
-    <div class="row card blog"  >
-        <div class="card-body">
-            <h5 class="card-title">Java Encapsulation</h5>
-            <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
-            <p class="card-text">Sometimes your class has some internal business to attend to. <a href="blog3.html" class="card-link">View More</a></p>
+            <p class="card-text">Sometimes your class has some internal business to attend to. For example,
+                your class may contains a method called save which takes as its argument the filename... <a href="blog2.html" class="card-link">View More</a></p>
         </div>
     </div>
     <div class="row card blog"  >
         <div class="card-body">
             <h5 class="card-title">Using Git</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
-            <p class="card-text">There are two components to using Git.  <a href="blog4.html" class="card-link">View More</a></p>
+            <p class="card-text">There are two components to using Git. A server for offsite sharing of your files and
+                a client to work with locally. Clients are available for all major operating systems. <a href="blog3.html" class="card-link">View More</a></p>
+        </div>
+    </div>
+    <div class="row card blog"  >
+        <div class="card-body">
+            <h5 class="card-title">GitHub for Teams</h5>
+            <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
+            <p class="card-text">To clone a repository:   <a href="blog4.html" class="card-link">View More</a></p>
         </div>
     </div>
     <div class="row card blog"  >
         <div class="card-body">
             <h5 class="card-title">HTML - SPAN and DIV Tags</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
-            <p class="card-text">The < span > tag is used to group inline-elements in a document.  <a href="blog5.html" class="card-link">View More</a></p>
+            <p class="card-text">The &lt;span&gt; tag is used to group inline-elements in a document.  <a href="blog5.html" class="card-link">View More</a></p>
         </div>
     </div>
 </div>
