--- a/src/html/blog3.html
+++ b/src/html/blog3.html
@@ -28,40 +28,27 @@
 <!--content of blog 1-->
 <div class="container">
     <div class="row">
-        <h2>Encapsulation</h2>
+        <h2>Using Git</h2>
 
         <p><i>23 July 2021</i></p>
 
-        <p>Sometimes your class has some internal business to attend to.</p>
-        <p>For example, your class may contains a method called save which takes as its argument the filename.</p>
-        <p>The class exposes (makes available) the save method.</p>
-        <p>Once the user of your class calls the save method your class still has work to do.
-            It must determine if the file exists. If the file doesn't exist then your class must create it on the disk.
-            Then write the data. Finally, close the connection to the file.</p>
-        <p>Encapsulation ensures that the user only knows about the save method and not every
-            little detail required to make the save method work.</p>
-
-
-        <h5>Public, Private and Protected, oh my!</h5>
-        <p>Getters/setters only allow private member variables to expose their data IF you want them to expose their data.
-            A variable not exposed via a getter or setter is effectively hidden
-            (unless it's declared public which isn't recommended). It may be used only by the class.
-            If you want that variable to be visible only to your class then declare it as private.
-            If you want it to be visible only to the class and any future subclasses then declare it as protected.
-            In any event the user has no idea it exists. It's secret to my class (and possibly subclasses).</p>
-
-        <p>A variable can have an access modifier</p>
-        <p><b>Public</b> - visible to any class in your program</p>
-        <p><b>Private</b> - visible only to your class (not sub classes)</p>
-        <p><b>Protected</b> - visible to your class and any subclasses (also visible to any classes in the same package)</p>
-        <p>You could also have a variable that has only a getter. That would be a read-only variable.
-            or you could have a variable with only a setter. That would be a write-only variable (not common though).</p>
-
-        <p>You could also have private variables like counters and things that only you class uses and nobody else uses.
-            Since there would be no getters/setters for those variables they would be private to the class.
-            Unless you declared them as protected. Then they would be visible to the class and subclasses.</p>
-
-
+        <p>There are two components to using Git. A server for offsite sharing of your files and
+            a client to work with locally.</p>
+        <p>Clients are available for all major operating systems. The most common client is to use the Git client
+            at the command line. You can download the software from GitHub.com which I’ll talk about more in a moment.</p>
+        <p>The Git command line client works on most platforms such as Windows, linux or Mac. You can also use Git
+            clients from Atlassian found at Sourcetreeapp.com. To download that requires an email signup but is otherwise free.</p>
+        <p>You may also find Git to be integrated in your favorite IDE such as Eclipse. When you want to save
+            your work remotely you’ll need a server. During this course I’ll focus on GitHub.com.
+            It’s the largest code repository in the world.</p>
+        <p>GitHub is a web-based Git repository hosting service, which offers all of the distributed revision
+            control and source code management (SCM) functionality of Git as well as adding its own features.
+            Unlike Git, which is strictly a command-line tool, GitHub provides a web-based graphical interface
+            and desktop as well as mobile integration. It also provides access control and several collaboration
+            features such as wikis, task management, and bug tracking and feature requests for every project.[3]</p>
+        <p>GitHub offers both plans for private repositories and free accounts,[4] which are usually used
+            to host open-source software projects.[5] As of 2015, GitHub reports having over 9 million users
+            and over 21.1 million repositories,[6] making it the largest code hoster in the world.[7]</p>
 
         <p class="source"><i><a>Source: Montgomery College Java Bootcamp (canvas)</a></i></p>
     </div>
