--- a/src/html/blog4.html
+++ b/src/html/blog4.html
@@ -28,27 +28,27 @@
 <!--content of blog 1-->
 <div class="container">
     <div class="row">
-        <h2>Using Git</h2>
+        <h2>GitHub for Teams</h2>
 
         <p><i>23 July 2021</i></p>
 
-        <p>There are two components to using Git. A server for offsite sharing of your files and
-            a client to work with locally.</p>
-        <p>Clients are available for all major operating systems. The most common client is to use the Git client
-            at the command line. You can download the software from GitHub.com which I’ll talk about more in a moment.</p>
-        <p>The Git command line client works on most platforms such as Windows, linux or Mac. You can also use Git
-            clients from Atlassian found at Sourcetreeapp.com. To download that requires an email signup but is otherwise free.</p>
-        <p>You may also find Git to be integrated in your favorite IDE such as Eclipse. When you want to save
-            your work remotely you’ll need a server. During this course I’ll focus on GitHub.com.
-            It’s the largest code repository in the world.</p>
-        <p>GitHub is a web-based Git repository hosting service, which offers all of the distributed revision
-            control and source code management (SCM) functionality of Git as well as adding its own features.
-            Unlike Git, which is strictly a command-line tool, GitHub provides a web-based graphical interface
-            and desktop as well as mobile integration. It also provides access control and several collaboration
-            features such as wikis, task management, and bug tracking and feature requests for every project.[3]</p>
-        <p>GitHub offers both plans for private repositories and free accounts,[4] which are usually used
-            to host open-source software projects.[5] As of 2015, GitHub reports having over 9 million users
-            and over 21.1 million repositories,[6] making it the largest code hoster in the world.[7]</p>
+        <h5>To clone a repository:</h5>
+        <pre>
+            <code>
+                git clone &lt;github_url&gt; &lt;local_directory&gt;To clone a repository:
+            </code>
+        </pre>
+
+        <h5>Workflow for teams:</h5>
+        <p>change to the project directory (or use IntelliJ terminal)</p>
+        <pre>
+            <code>
+                git pull (gets latest changes from GitHub)
+                git add --all
+                git commmit -m "descriptive message so others know what you've done"
+                git push orign master (optionally you can use git push -u origin master )
+            </code>
+        </pre>
 
         <p class="source"><i><a>Source: Montgomery College Java Bootcamp (canvas)</a></i></p>
     </div>
