--- a/src/html/authors.html
+++ b/src/html/authors.html
@@ -26,15 +26,15 @@
     <div class="row">
         <h2 style="text-align: center">Meet the Blog Authors!</h2>
     </div>
-    <div class="row">
-        <div class="card-group">
+    <div class="row" style="width: 28rem; align-items: center">
+
             <div class="card between-card">
                 <img src="../images/profile.png" class="card-img-top" alt="profile-pic" style="width: 50%; margin: auto">
                 <div class="card-body">
                     <h5 class="card-title">Khulan Jargalsaikhan</h5>
                     <p class="card-text">Recent graduate and majored in Information System
                         Technology A.A.S from Northern Virginia Community College in 2021.</p
-                    <p><i>Certification:</i></p>
+                    <p><i>Certifications:</i></p>
                     <ul>
                         <li>AWS Cloud Practitioner Certified</li>
                         <li>CompTIA Security + certified</li>
@@ -53,31 +53,9 @@
 
                 </div>
             </div>
-            <div class="card between-card">
-                <img src="../images/profile-pic2.jpg" class="card-img-top" alt="profile-pic" style="width: 50%; margin: auto">
-                <div class="card-body">
-                    <h5 class="card-title">It is me again</h5>
-                    <p class="card-text">Recent graduate and majored in Information System
-                        Technology A.A.S from Northern Virginia Community College in 2021.</p>
-                    <p><i>Certification:</i></p>
-                    <ul>
-                        <li>AWS Cloud Practitioner Certified</li>
-                        <li>CompTIA Security + certified</li>
-                    </ul>
-                    <p><i>Hobbies:</i></p>
-                    <ul>
-                        <li>Exercise, nutrition, hiking, camping, and travelling</li>
-                        <li>Love coffee, code, history and science</li>
-                    </ul>
-                    <div style="text-align: center">
-                        <p style="color: gray"> -------- Follow Links -------- </p>
-                        <a href="https://www.linkedin.com/in/khulan-jargalsaikhan-766a7312b/"><i style="color:#0e76a8; font-size: 2rem; padding: 2rem" class="bi bi-linkedin"></i></a>
-                        <a href="https://github.com/khulanJargalsaikhan"><i style="color:#211F1F; font-size: 2rem; padding: 2rem" class="bi bi-github"></i></a>
-                        <a href="https://www.facebook.com/"><i style="color:#4267B2; font-size: 2rem; padding: 2rem" class="bi bi-facebook"></i></a>
-                    </div>
-            </div>
+
         </div>
-    </div>
+
 </div>
 
 
