changed some info on author page

--- a/src/html/authors.html
+++ b/src/html/authors.html
@@ -13,7 +13,7 @@
 <!--Nav Bar-->
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
+        <a class="nav-link" href="../home.html">Home</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="about.html">About the Bootcamp</a>
@@ -26,14 +26,13 @@
     <div class="row">
         <h2 style="text-align: center">Meet the Blog Authors!</h2>
     </div>
-    <div class="row" style="width: 28rem; align-items: center">
 
-            <div class="card between-card">
-                <img src="../images/profile.png" class="card-img-top" alt="profile-pic" style="width: 50%; margin: auto">
+
+            <div class="card col-sm-5" style="margin: auto">
+                <img src="../images/profile.png" class="card-img-top" alt="profile-pic" style="width: 20%; margin: auto">
                 <div class="card-body">
                     <h5 class="card-title">Khulan Jargalsaikhan</h5>
-                    <p class="card-text">Recent graduate and majored in Information System
-                        Technology A.A.S from Northern Virginia Community College in 2021.</p
+                    <p class="card-text"> Software Developer. Passionate about problem-solving and learning new technologies.</p>
                     <p><i>Certifications:</i></p>
                     <ul>
                         <li>AWS Cloud Practitioner Certified</li>
@@ -54,7 +53,7 @@
                 </div>
             </div>
 
-        </div>
+
 
 </div>
 
