--- a/src/home.html
+++ b/src/home.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -16,10 +16,10 @@
             <a class="nav-link active" aria-current="page" href="home.html">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="about.html">About the Bootcamp</a>
+            <a class="nav-link" href="html/about.html">About the Bootcamp</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="authors.html">Blog Authors</a>
+            <a class="nav-link" href="html/authors.html">Blog Authors</a>
         </li>
     </ul>
 </div>
@@ -34,7 +34,7 @@
             <h5 class="card-title">Overrides</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
             <p class="card-text">Overriding in Java. In any object-oriented programming language, Overriding is a
-                feature that allows a subclass or child class to provide a specific implementation... <a href="blog1.html" class="card-link">View More</a></p>
+                feature that allows a subclass or child class to provide a specific implementation... <a href="html/blog1.html" class="card-link">View More</a></p>
         </div>
     </div>
     <div class="row card blog"  >
@@ -42,7 +42,7 @@
             <h5 class="card-title">Encapsulation</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
             <p class="card-text">Sometimes your class has some internal business to attend to. For example,
-                your class may contains a method called save which takes as its argument the filename... <a href="blog2.html" class="card-link">View More</a></p>
+                your class may contains a method called save which takes as its argument the filename... <a href="html/blog2.html" class="card-link">View More</a></p>
         </div>
     </div>
     <div class="row card blog"  >
@@ -50,21 +50,21 @@
             <h5 class="card-title">Using Git</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
             <p class="card-text">There are two components to using Git. A server for offsite sharing of your files and
-                a client to work with locally. Clients are available for all major operating systems. <a href="blog3.html" class="card-link">View More</a></p>
+                a client to work with locally. Clients are available for all major operating systems. <a href="html/blog3.html" class="card-link">View More</a></p>
         </div>
     </div>
     <div class="row card blog"  >
         <div class="card-body">
             <h5 class="card-title">GitHub for Teams</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
-            <p class="card-text">To clone a repository:   <a href="blog4.html" class="card-link">View More</a></p>
+            <p class="card-text">To clone a repository:   <a href="html/blog4.html" class="card-link">View More</a></p>
         </div>
     </div>
     <div class="row card blog"  >
         <div class="card-body">
             <h5 class="card-title">HTML - SPAN and DIV Tags</h5>
             <p class="card-subtitle mb-2 text-muted"><i>23 July 2021</i></p>
-            <p class="card-text">The &lt;span&gt; tag is used to group inline-elements in a document.  <a href="blog5.html" class="card-link">View More</a></p>
+            <p class="card-text">The &lt;span&gt; tag is used to group inline-elements in a document.  <a href="html/blog5.html" class="card-link">View More</a></p>
         </div>
     </div>
 </div>
