--- a/src/html/about.html
+++ b/src/html/about.html
@@ -12,7 +12,7 @@
 <div>
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link" href="home.html">Home</a>
+            <a class="nav-link" href="../home.html">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="about.html">About the Bootcamp</a>
